[package]
name = "rust_warp_api"
version = "0.1.0"
authors = ["andrewleverette <andrew.leverette@decisionsource.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"